--- a/index_B2-2.html
+++ b/index_B2-2.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>実験システム (B2-2)</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>実験システム</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <div id="experiment-area">
-        
-        <div id="recording-indicator" class="hidden"></div>
+    <div id="experiment-area">
+        <div id="recording-indicator" class="hidden"></div>
 
-        <div id="message-display">
-            実験を開始します。「開始」ボタンを押してください。
-        </div>
+        <div id="message-display">
+            実験を開始します。「開始」ボタンを押してください。
+        </div>
 
-        <button id="mic-button" disabled>
-            <span id="mic-icon">🎤</span>
-            <span id="mic-text">押しながら話す</span>
-        </button>
+        <button id="mic-button" disabled>
+            <span id="mic-icon">🎤</span>
+            <span id="mic-text">押しながら話す</span>
+        </button>
 
-        <button id="start-button">開始</button>
+        <button id="start-button">開始</button>
+    </div>
 
-    </div>
-
-    <script src="script_B2-2.js"></script>
+        <script src="script_B2-2.js"></script> 
 </body>
 </html>
